# rigel

./: .coverage  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  main.py  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi.yml
.sirius_config/: config
docs/: conf.py  index.rst  rigel.clients.rst  rigel.models.rst  rigel.plugins.aws.robomaker.rst  rigel.plugins.aws.rst  rigel.plugins.core.rst  rigel.plugins.core.test.rst  rigel.plugins.rst  rigel.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  rigel.cli.doctree  rigel.clients.doctree  rigel.doctree  rigel.files.doctree  rigel.loggers.doctree  rigel.models.core.doctree  rigel.models.doctree  (+12 more)
rigel/: __init__.py  cli.py  exceptions.py  executor.py  main.py  orchestrator.py  workspace.py
rigel/assets/: Rigelfile
rigel/cli/: __init__.py  command.py  config.py  package.py  plugin.py  run.py  workspace.py
rigel/clients/: __init__.py  docker.py  rosbridge.py
rigel/config/: __init__.py  defaults.py  manager.py
rigel/docker/: __init__.py  builder.py
rigel/files/: __init__.py  decoder.py  dockerfile.py  image.py  loader.py  parser.py  renderer.py  rigelfile.py
rigel/loggers/: __init__.py  docker.py  error.py  logger.py  message.py
rigel/models/: __init__.py  application.py  builder.py  data.py  docker.py  package.py  plugin.py  provider.py  rigelfile.py  ros.py  sequence.py  simulation.py
rigel/parsers/: __init__.py  configuration.py  decoder.py  injector.py  rigelfile.py
rigel/plugins/: __init__.py  ecr.py  installer.py  loader.py  manager.py  plugin.py  runner.py
rigel/providers/: manager.py  provider.py
rigel/renderers/: __init__.py  configuration.py  docker.py  dockerfile.py  entrypoint.py  rigelfile.py  ssh.py
rigel/ros/: __init__.py  manager.py  package.py  workspace.py
rigel/simulations/: __init__.py  manager.py  parser.py  requirement.py
sirius/: __init__.py
sirius/files/: __init__.py  configuration.py
sirius/parsers/: __init__.py  configuration.py
sirius/renderers/: __init__.py  configuration.py  docker.py  entrypoint.py  ssh.py
tests/: test_docker.py  test_exceptions.py  test_files.py  test_files_decoder.py  test_files_loader.py  test_files_renderer.py  test_main.py  test_models_builder.py  test_models_docker.py  test_parsers.py  test_plugins_installer.py  test_plugins_loader.py  test_simulations_manager.py  test_simulations_requirement.py  test_simulations_strategy.py
tests/assets/: build_basic  build_complete  invalid_undeclared
tests/cli/: test_cli_command.py  test_cli_run.py  test_command.py
tests/clients/: test_clients_docker.py  test_clients_rosbridge.py
tests/files/: test_files_creator.py  test_files_decoder.py  test_files_loader.py
tests/models/: test_models_builder.py  test_models_docker.py  test_models_package.py  test_models_plugin.py
tests/plugins/: test_files_renderer.py  test_plugin.py  test_plugins_installer.py  test_plugins_manager.py
(+178 files in other folders)
